# mcp5

./: .gitignore  Cargo.toml  Makefile  README.md  gf.d.ts  gf.js  gf_bg.wasm.d.ts
.github/workflows/: wasm.yml
public/: index.html
src/: block.rs  camera.rs  chunk.rs  components.rs  control.rs  draw.rs  grid.rs  hit.rs  interaction.rs  keymap.rs  light.rs  main.rs  map.rs  motion.rs  physics.rs  player.rs  sprite.rs  temporary.rs  terrain.rs  textures.rs  voxel.rs
src/ai/: chase.rs  mod.rs
